styles/globals.css
/* GENERAL */

@font-face {
  font-family: "PPGoshaSans";
  src: url("../public/fonts/PPGoshaSans-Regular.woff2") format("opentype");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "PPGoshaSans";
  src: url("../public/fonts/PPGoshaSans-Bold.woff2") format("opentype");
  font-weight: bold;
  font-style: normal;
}

body {
  padding: 0;
  margin: 0;
  font-family: "PPGoshaSans", sans-serif, Segoe UI, Roboto, Oxygen, Ubuntu,
    Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  color: #0f1b61;
  background: #f4f9fc;
}

h1 {
  font-size: 3rem;
  font-weight: 700;
  transition: letter-spacing 0.3s ease;
}
h1:hover {
  letter-spacing: 2px; /* Increase the space between letters on hover */
}
a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: Btn border-box;
}

.onlyMidBtn {
  display: none !important;
}
.onlyBigBtn {
  display: block;
}

.pointer:hover {
  cursor: pointer;
}

.container {
  padding: 0;
  margin: 0;
}
.main {
  padding: 2rem 10%;
}

.aboutFont {
  font-size: 1.5em;
  text-align: center;
}

/* EXPERIENCE */
.experienceContainer {
  position: relative;
  border-bottom: 5px solid #abdcec;
  border-left: 5px solid #abdcec;
  padding-bottom: 10px;
}
.lastClockContainer {
  position: relative;
  border-left: 5px solid #abdcec;
}
.clockImage {
  position: absolute;
  left: -32.5px;
}
.dateText {
  margin-left: 55px;
  margin-top: 0px;
  padding-top: 15px;
  font-size: 2em;
}

.companyDetailContainer {
  display: flex;
  container: cDetailContainer / inline-size;
}

@container cDetailContainer (max-width: 350px) {
  .companyDetails {
    padding: 0 15px !important;
    background: red;
  }
}
.viewProject {
  text-align: center;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 15px;
}

.companyDetails {
  flex: 1;
  margin-top: 10px;
  padding: 0 50px;
  background-size: 90% 100%;
  background-repeat: no-repeat;
  background-position: center;
  height: 100%;
}

.tech-icon:hover {
  filter: grayscale(0%);
}
.tech-icon {
  filter: grayscale(100%);
  transition: filter 0.3s ease;
}

.tech-name {
  opacity: 0;
  transition: opacity 0.4s ease;
}

.tech-item:hover .tech-name {
  opacity: 1;
}
/* MAIN PROJECTS */
.projectsContainer {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 10px;
  margin: 40px 20px;
}
.projectMain {
  padding: 20px;
  width: 100%;
}

/* PET PROJECTS */
.petProjectContainer {
  grid-template-columns: repeat(3, 1fr);
  display: grid;
  gap: 20px;
}

/* CONTACT */
textarea,
input {
  border: none;
  background: none;
  border-image: "./hor_line.svg";
}
textarea {
  width: 100%;
}
textarea,
input:focus-visible {
  border: none;
  background: none;
  background-color: none;
  outline: none;
}
#button:hover {
  cursor: pointer;
}

/* RESPONSIVE */
@media (max-width: 600px) {
  body {
    text-align: center;
  }

  .main {
    padding: 1rem 10px !important;
  }

  .onlyPhone {
    display: block;
  }

  .aboutFont {
    font-size: 1.1em;
    text-align: justify;
  }

  .experienceContainer,
  .lastClockContainer {
    border-left: none;
  }
  .clockImage {
    left: 0px;
  }
  .dateText {
    margin-left: 0;
  }
  /* MAIN PROJECTS */
  .projectsContainer {
    display: grid;
    grid-template-columns: 1fr;
    grid-gap: 10px;
    /* margin: 40px 0; */
  }
  .projectMain {
    padding: 5px;
    width: 90%;
    margin: 0px 5%;
  }

  .petProjectContainer {
    grid-template-columns: repeat(1, 1fr) !important;
  }
  /* CONTACT */
  #contact-form {
    padding: 8vw 6vw !important;
  }
  .label {
    height: 10px !important;
  }
  .email_cont {
    margin-top: 5px !important;
    margin-bottom: 10px !important;
  }
  .message_label {
    height: 13px;
  }
  #front_1_ {
    display: none !important;
  }
}
@media (max-width: 900px) {
  .main {
    padding: 2rem 10% !important;
  }
  .petProjectContainer {
    grid-template-columns: repeat(2, 1fr);
  }
}
@media (max-width: 1100px) {
  /* EXPRERIENCE */
  .companyDetailContainer {
    flex-direction: column;
  }
  .companyDetails {
    margin-top: 25px;
  }
  .jobArrow {
    display: none !important;
  }
  .projectsContainer {
    grid-template-columns: 1fr;
  }

  .onlyBigBtn {
    display: none;
  }
  .onlyMidBtn {
    display: flex !important;
  }
}

@media (max-width: 1300px) {
  .main {
    padding: 2rem 15%;
  }
  .projectsContainer {
  }
}

